--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100083778625398%22%3A%22VpespG1f%22%2C%2261559684571908%22%3A%22bXGAZXgH%22%2C%2261559183320473%22%3A%22aP1miUHU%22%2C%2261559612725208%22%3A%223Noh6H8j%22%2C%2261559638343858%22%3A%22ZQMKy556%22%2C%22100083288731049%22%3A%22TeceRUhV%22%2C%2261557696202314%22%3A%22ZfootNNN%22%2C%2261550754170182%22%3A%2236nqXjRf%22%2C%22100091832889003%22%3A%22tOer9XFS%22%2C%22100027985837717%22%3A%22VHF2Bwbc%22%2C%2261560642595847%22%3A%22niXBJJgL%22%2C%2261560996622839%22%3A%22RC9tWE4h%22%2C%2261560989243211%22%3A%22Wz65BRPe%22%2C%2261560492431792%22%3A%22VxZLnHEK%22%2C%2261560963023984%22%3A%221EyU6chs%22%2C%2261560527710001%22%3A%22ts4JPeJA%22%2C%2261560352367425%22%3A%229Ny0xO6U%22%2C%2261560682684407%22%3A%223pIrXNl1%22%2C%2261560806521098%22%3A%223C93LaA4%22%2C%2261560391156215%22%3A%22fDIwpmpL%22%2C%2261561027671951%22%3A%220vANFFoY%22%2C%2261560396135923%22%3A%22L9EgOlNC%22%2C%2261560871049277%22%3A%22z4gA8Dy0%22%2C%2261560835109686%22%3A%22VN5Lf08j%22%2C%2261560893546943%22%3A%22DHSFpD81%22%2C%2261560862801786%22%3A%22MeRfUVxa%22%2C%2261560867512014%22%3A%223cHuMI6b%22%2C%2261560988347966%22%3A%22s6LMLl6Z%22%2C%2261561099494674%22%3A%22VH2PLndr%22%2C%2261560951479330%22%3A%22eydPyhj7%22%2C%2261561067215833%22%3A%226MyjYLnb%22%2C%2261560729876455%22%3A%22IDgM7CHL%22%2C%2261560491236790%22%3A%2285rhlkHq%22%2C%2261560619241635%22%3A%22M8iGRtMJ%22%2C%2261561144193049%22%3A%22KgkdlWMM%22%2C%2261561063161771%22%3A%22ICrXYFjX%22%2C%2261560701409087%22%3A%22vYTzzNnp%22%2C%2261560487366962%22%3A%22S2dbzDtc%22%2C%2261561052155065%22%3A%22k1rHYsyL%22%2C%2261560797739602%22%3A%22QvV558iI%22%2C%2261560812289038%22%3A%22O7BuUpMe%22%2C%2261561103938086%22%3A%22kzcMT3p5%22%2C%2261560872646408%22%3A%22Z06KyrNj%22%2C%2261561018842036%22%3A%22u3jF60BO%22%7D",
+        "value": "%7B%22100083778625398%22%3A%22VpespG1f%22%2C%2261559684571908%22%3A%22mOjFSexf%22%2C%2261559183320473%22%3A%22aP1miUHU%22%2C%2261559612725208%22%3A%223Noh6H8j%22%2C%2261559638343858%22%3A%22ZQMKy556%22%2C%22100083288731049%22%3A%22TeceRUhV%22%2C%2261557696202314%22%3A%22ZfootNNN%22%2C%2261550754170182%22%3A%22fEGpXRV1%22%2C%22100091832889003%22%3A%22tOer9XFS%22%2C%22100027985837717%22%3A%22VHF2Bwbc%22%2C%2261560642595847%22%3A%22niXBJJgL%22%2C%2261560996622839%22%3A%22RC9tWE4h%22%2C%2261560989243211%22%3A%22Wz65BRPe%22%2C%2261560492431792%22%3A%22VxZLnHEK%22%2C%2261560963023984%22%3A%221EyU6chs%22%2C%2261560527710001%22%3A%22ts4JPeJA%22%2C%2261560352367425%22%3A%229Ny0xO6U%22%2C%2261560682684407%22%3A%223pIrXNl1%22%2C%2261560806521098%22%3A%223C93LaA4%22%2C%2261560391156215%22%3A%22fDIwpmpL%22%2C%2261561027671951%22%3A%220vANFFoY%22%2C%2261560396135923%22%3A%22L9EgOlNC%22%2C%2261560871049277%22%3A%22z4gA8Dy0%22%2C%2261560835109686%22%3A%22VN5Lf08j%22%2C%2261560893546943%22%3A%22DHSFpD81%22%2C%2261560862801786%22%3A%22MeRfUVxa%22%2C%2261560867512014%22%3A%223cHuMI6b%22%2C%2261560988347966%22%3A%22s6LMLl6Z%22%2C%2261561099494674%22%3A%22VH2PLndr%22%2C%2261560951479330%22%3A%22eydPyhj7%22%2C%2261561067215833%22%3A%226MyjYLnb%22%2C%2261560729876455%22%3A%22IDgM7CHL%22%2C%2261560491236790%22%3A%2285rhlkHq%22%2C%2261560619241635%22%3A%22M8iGRtMJ%22%2C%2261561144193049%22%3A%22KgkdlWMM%22%2C%2261561063161771%22%3A%22ICrXYFjX%22%2C%2261560701409087%22%3A%22vYTzzNnp%22%2C%2261560487366962%22%3A%22S2dbzDtc%22%2C%2261561052155065%22%3A%22k1rHYsyL%22%2C%2261560797739602%22%3A%22QvV558iI%22%2C%2261560812289038%22%3A%22aESbq52j%22%2C%2261561103938086%22%3A%22kzcMT3p5%22%2C%2261560872646408%22%3A%22Z06KyrNj%22%2C%2261561018842036%22%3A%22u3jF60BO%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.639Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "oo",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
-    },
-    {
-        "key": "dpr",
-        "value": "3.0234789848327637",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "m_ls",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "vpd",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "locale",
@@ -86,17 +77,35 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
-        "key": "fr",
-        "value": "0iBnw2rDrS65VxHFQ.AWUAEqH0LIgi6RdXE9VIDbMj_cs.BmZZou..AAA.0.0.BmggsS.AWV79FhFtjs",
+        "key": "dpr",
+        "value": "3.0234789848327637",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x764",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "c_user",
@@ -104,52 +113,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "xs",
-        "value": "19%3ArI92vRA4gf96jw%3A2%3A1719798546%3A-1%3A-1",
+        "value": "36%3AcAl3PGHKFvn3ww%3A2%3A1719893826%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
-    },
-    {
-        "key": "wd",
-        "value": "891x1732",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2547%3Btimestamp%3A1719799189",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
         "key": "fbl_st",
-        "value": "101036082%3BT%3A28663319",
+        "value": "101032653%3BT%3A28664897",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1719799201888%2C%22v%22%3A1%7D",
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2549%3Btimestamp%3A1719893830",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-01T02:00:18.614Z",
-        "lastAccessed": "2024-07-01T02:00:18.614Z"
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
+    },
+    {
+        "key": "fr",
+        "value": "0iBnw2rDrS65VxHFQ.AWXK_wCZQ7PrW3c9mUadlmuTLXo.BmZZou..AAA.0.0.Bmg39J.AWXlp7xyN34",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-02T04:17:13.640Z",
+        "lastAccessed": "2024-07-02T04:17:13.640Z"
     }
 ]
